test/make_output.txt
gcc -g -Wstack-usage=200  -Wall -Wextra -Wpointer-arith -Wcast-align -Wwrite-strings -Wswitch-default -Wunreachable-code -Winit-self -Wmissing-field-initializers -Wno-unknown-pragmas -Wno-misleading-indentation -DUNIT_TEST -I. -I../include -Imocks -IUnity/src -I../src  -c test.c -o build/test.o
test.c: In function ‘test_vFlow_timedSwitch’:
test.c:763:5: error: ‘mock_millis_u32Return’ undeclared (first use in this function)
  763 |     mock_millis_u32Return = 4999;
      |     ^~~~~~~~~~~~~~~~~~~~~
test.c:763:5: note: each undeclared identifier is reported only once for each function it appears in
test.c:764:5: warning: implicit declaration of function ‘Switch_vLoop’ [-Wimplicit-function-declaration]
  764 |     Switch_vLoop((LOOPABLE_T*)psSwitchHnd, mock_millis_u32Return);
      |     ^~~~~~~~~~~~
make: *** [Makefile:80: build/test.o] Error 1
